# antigravity-quota-quickcheck

./: .gitignore  CHANGELOG.md  Guideline.md  README.md  package-lock.json  package.json  source-instruction.md  tsconfig.json
.github/workflows/: publish.yml
desktop-app/: README.md  index.html  package-lock.json  package.json
desktop-app/scripts/: copy-release.js
desktop-app/src/: main.ts  styles.css
desktop-app/src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs
src/: constants.ts  extension.ts  telemetry.ts
src/telemetry/: client.ts  index.ts  parser.ts  process.ts  types.ts
src/ui/: helpers.ts  quickPick.ts  statusBar.ts  tooltip.ts
