[package]
name = "antigravity-quota-tray"
version = "1.2.1"
description = "Antigravity Quota Tray Application"
authors = ["the-long-ride"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
tokio = { version = "1", features = ["time"] }
raw-window-handle = "0.6"
